--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta charset="utf-8">
+  	<title>tetris</title>
+  	<style type="text/css">
+
+		#canvas {
+		  background-color: #111;
+		}
+
+  	</style>
   </head>
   <body>
+
+  	<p id="instruction">press any key to start</p>
+
+	<canvas id="canvas"></canvas>
+	<script src="game.js"></script>
+
   </body>
 </html>
