--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   </head>
   <body>
 
-  	<p id="instruction">press any key to start</p>
+  	<span id="score">score: 0</span>
+  	<span id="instruction"> - press any key to start</span>
+
+  	<br><br>
 
 	<canvas id="canvas"></canvas>
 	<script src="game.js"></script>
